[tool.poetry]
name = "teensydb"
version = "0.0.1"
description = ""
authors = ["kesha1225"]

[tool.poetry.dependencies]
python = "^3.7"
orjson = "^3.1.1"
pydantic = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
